updated stuck hover fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ nav > div > a:active {
     transition: 250ms;
 }
 
-@media(hover: hover) and (pointer: fine) {
+@media(hover: hover) {
     nav > div > a:hover {
         background-color: #EBC323;
         color: black;
@@ -74,7 +74,7 @@ nav > button:active {
     transition: 250ms;
 }
 
-@media(hover: hover) and (pointer: fine) {
+@media(hover: hover) {
     nav > div > a:hover {
         background-color: #a0851a;
         color: black;
